--- a/Klapp_Angular/src/app/banner-top/banner-top.component.html
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.html
@@ -1,23 +1,26 @@
-  <div class="banner-border border border-2" style="border-radius: 8px; width: 674px; height: 99px;">
+<div class="banner-border border border-2 mb-2" style="border-radius: 8px; max-height: 99px;">
 
-    <ngb-carousel>
-      <ng-template ngbSlide>
-        <div class="carousel-caption">
-          <p><i class="bi bi-calendar2-check"></i> O QUIZ de Arquitetura de Computadores já está disponível</p>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="carousel-caption">
-          <p><i class="bi bi-stopwatch"></i> O prazo para o QUIZ de Construção de Algoritimos está acabando
-          </p>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="carousel-caption">
-          <p><i class="bi bi-exclamation-circle"></i> Não se esqueça de realizar os quizes pendentes! Bons Estudos</p>
+  <ngb-carousel>
+    <ng-template ngbSlide>
+      <div class="carousel-caption">
+        <p class=" p-0" style="margin-left: -280px; "><i class="bi bi-calendar2-check"></i> O QUIZ de Arquitetura de
+          Computadores já está disponível</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="carousel-caption">
+        <p class=" p-0" style="margin-left: -280px;"><i class="bi bi-stopwatch"></i> O prazo para o QUIZ de Construção
+          de Algoritimos está acabando
+        </p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="carousel-caption">
+        <p class=" p-0" style="margin-left: -280px;"><i class="bi bi-exclamation-circle"></i> Não se esqueça de realizar
+          os quizes pendentes! Bons Estudos</p>
 
-        </div>
-      </ng-template>
-    </ngb-carousel>
+      </div>
+    </ng-template>
+  </ngb-carousel>
 
-  </div>
+</div>
