--- a/Klapp_Angular/src/app/side-menu/side-menu.component.html
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.html
@@ -1,7 +1,6 @@
-
-<div class="col align-items-start border border-2 blurred-background" style="height: 790px; width: 323px; border-radius: 8px;">
-    <img style="max-height: 70px; margin: 20px 20px 50px;" src="/assets/images/Logotipo.svg" alt="">
-    <div class="link-icons col row align-items-start" style="margin: 10.5px; font-size: 25px;">
+<div class="col align-items-start border border-2 blurred-background" style="border-radius: 8px; margin-left: 10px; min-height: 663px; min-width: none;">
+    <img style="max-height: 60px; margin: 20px 20px 50px;" src="/assets/images/Logotipo.svg" alt="">
+    <div class="link-icons col row align-items-start" style="margin: 10.5px; font-size: 20px;">
         <a href="/home" class="text-decoration-none text-dark mb-4">
             <p class="bi bi-house-door mb-4"> Home</p>
         </a>
