--- a/Klapp_Angular/src/app/banner-top/banner-top.component.scss
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.scss
@@ -1,31 +1,21 @@
 .banner-border {
-  background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
-  backdrop-filter: blur(10px); /* Aplica o desfoque */
-  -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .carousel-caption {
-  visibility: visible !important; /* Garante que o conteúdo seja visível */
-  opacity: 1 !important; /* Garante que o conteúdo seja opaco */
+  visibility: visible !important;
   position: relative;
- 
+ }
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
 
 .carousel-caption p {
   color: white;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
-  margin-top: 45px;
- 
+  margin-top: 38px;
+  text-align: center;
 }
 
-.carousel-control-prev{
-  margin: 0 !important;
-  padding: 0 !important;
-}
