--- a/Klapp_Angular/src/app/side-right/side-right.component.scss
+++ b/Klapp_Angular/src/app/side-right/side-right.component.scss
@@ -4,3 +4,23 @@
     backdrop-filter: blur(10px); /* Aplica o desfoque */
     -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
   }
+
+  .accordion-item {
+    color: #FFF;
+    font-family: "Poppins", sans-serif;
+   
+    background-color: transparent;
+    border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+}
+
+button {
+  background-color: transparent;
+  color: #FFF;
+  font-family: "Poppins", sans-serif;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #FFF;
+  background-color: transparent;
+  
+}
