--- a/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.html
+++ b/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.html
@@ -1,13 +1,14 @@
-<div class=" background-container container-fluid">
-  <div class="row g-1">
-    <div class="col-md-3 mt-3">
+<div class="background-container container-fluid">
+  <div class="row" style="gap: 10px">
+    <div class="col-md-2 mt-3">
       <app-side-menu></app-side-menu>
     </div>
-    <div class="col-md-6 mt-3"> 
-      <app-banner-top></app-banner-top>
+    <div class="col-md-7 mt-3">
+      <app-banner-top>
+      </app-banner-top>
       <app-ranking></app-ranking>
     </div>
-    <div class="col-md-3 mt-3">
+    <div class="col-md-2 mt-3">
       <app-logout-image></app-logout-image>
       <app-side-right></app-side-right>
     </div>
