--- a/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.scss
+++ b/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.scss
@@ -1,10 +1,13 @@
-.background-container {
-    background-image: url('/assets/images/Background.svg');
-    background-size: cover; /* Faz a imagem cobrir toda a área do elemento */
-    background-repeat: no-repeat; /* Evita que a imagem se repita */
-    background-position: center; /* Centraliza a imagem no elemento */
-    width: 100%; /* Largura total da tela */
-    height: 851px; /* Altura total da tela */
-    align-items: center; /* Centraliza os itens horizontalmente, se necessário */
+* {
+    margin: 0;
+    padding: 0;
 }
 
+.background-container {
+    background-image: url('/assets/images/Background.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+}
