--- a/Klapp_Angular/src/app/ranking-message/ranking-message.component.scss
+++ b/Klapp_Angular/src/app/ranking-message/ranking-message.component.scss
@@ -1,9 +1,13 @@
 .message-text {
-    color: white;
-  }
-  
-  .rank-number {
-    color: #191D6B;
-    font-size: 1.5em; // Altere o tamanho conforme necessário
-  }
-  
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  color: #FFF;
+}
+
+.rank-number {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  color: #191D6B;
+  font-size: 1.5em; // Altere o tamanho conforme necessário
+}
