--- a/Klapp_Angular/src/app/side-right/side-right.component.scss
+++ b/Klapp_Angular/src/app/side-right/side-right.component.scss
@@ -3,6 +3,7 @@
     background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
     backdrop-filter: blur(10px); /* Aplica o desfoque */
     -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
+    border-radius: 8px;
   }
 
   .accordion-item {
@@ -24,3 +25,20 @@ button {
   background-color: transparent;
   
 }
+
+.materia{
+  margin-left: 5px;
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  color: #FFF;
+  font-size: 15px;
+}
+
+
+
+.inferior{
+  text-align: right;
+  align-items: end;
+  font-size: 13px;
+}
+
