tela de perfil, rotas atualizadas

--- a/Klapp_Angular/src/app/ranking/ranking.component.html
+++ b/Klapp_Angular/src/app/ranking/ranking.component.html
@@ -1,5 +1,4 @@
-<div class="container banner-border border border-2"
-    style="border-radius: 8px;">
+<div class="container banner-border border border-2" style="border-radius: 8px;">
     <p class="text m-0">Você está em <span class="mb-0">7º</span> lugar</p>
 
 
