--- a/Klapp_Angular/src/app/side-right/side-right.component.html
+++ b/Klapp_Angular/src/app/side-right/side-right.component.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
 
-                        
+
                     </ng-template>
                 </div>
             </div>
@@ -44,6 +44,38 @@
             <div ngbAccordionCollapse>
                 <div ngbAccordionBody>
                     <ng-template>
+
+                        <div class="materia1">
+                            <p>Ciências Exatas</p>
+                            <div class="pontuacao">
+
+                            </div>
+                        </div>
+                        <div class="materia2">
+                            <p></p>
+                            <div class="pontuacao">
+                                
+                            </div>
+                        </div>
+                        <div class="materia3">
+                            <p></p>
+                            <div class="pontuacao">
+                                
+                            </div>
+                        </div>
+                        <div class="materia4">
+                            <p></p>
+                            <div class="pontuacao">
+                                
+                            </div>
+                        </div>
+                        <div class="materia5">
+                            <p></p>
+                            <div class="pontuacao">
+                                
+                            </div>
+                        </div>
+
                     </ng-template>
                 </div>
             </div>
