att tela-perfil

--- a/Klapp_Angular/src/app/profile-container/profile-container.component.html
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.html
@@ -1,4 +1,12 @@
 <div class="container banner-border border border-2" style="border-radius: 8px; min-height: 555px;">
-
-    
+    <div class="foto-dados m-3">
+        <h1>Perfil do aluno</h1>
+        
+            <img src="/assets/images/Profile-imageG.svg" alt=""><i class="bi bi-plus-circle"></i>
+            
+          
+    <div class="dados-escolares m-3">
+        <h2>Insira suas notas do ensino médio</h2>
+        <p>Preencha os campos abaixo com as suas médias anuais para calcular seu desempenho final.</p>
+    </div>
 </div>
