--- a/Klapp_Angular/src/app/profile-container/profile-container.component.scss
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.scss
@@ -1,3 +1,7 @@
+*{
+  color: #FFF;
+  font-family: "Poppins", sans-serif;
+}
 .banner-border {
     padding: 10px;
     background: rgba(255, 255, 255, 0.3);
