--- a/Klapp_Angular/src/app/side-right/side-right.component.html
+++ b/Klapp_Angular/src/app/side-right/side-right.component.html
@@ -7,7 +7,7 @@
             <div ngbAccordionCollapse>
                 <div ngbAccordionBody>
                     <ng-template>
-                        <div class="quiz-pendente d-flex banner-border border border-2 m-2">
+                        <a routerLink="/tela-quiz" class="quiz-pendente d-flex banner-border border border-2 m-2">
                             <img src="/assets/images/books.svg" alt="imagem de livros">
                             <div class="materia">
                                 <p>Fundamentos de
@@ -16,7 +16,7 @@
                                     <p>Disponível até 16/12</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                         <div class="quiz-pendente d-flex banner-border border border-2 m-2">
                             <img src="/assets/images/pastas.svg" alt="imagem de livros">
