--- a/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
+++ b/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
@@ -4,52 +4,68 @@
       <app-side-menu></app-side-menu>
     </div>
     <div class="col-md-7 mt-3">
-      <app-banner-top>
-      </app-banner-top>
+      <app-banner-top></app-banner-top>
       <div class="container banner-border border border-2" style="border-radius: 8px; height: 553px;">
         <div class="d-flex justify-content-center">
           <h3 class="text-white mt-1 mb-2">Fundamentos de Sistemas de Informação</h3>
         </div>
 
-        <!-- Barra de progresso -->
-        <div class="d-flex justify-content-center">
-          <div class="progress-bar-container" style="width: 80%; background-color: #e0e0e0; border-radius: 8px; position: relative;">
-            <div class="progress-bar" [style.width.%]="progress" style="padding: 10px 0; border-radius: 8px; background-color: #474A89; color: white; text-align: center;">
-              <div class="question-indicator" [ngStyle]="{ 'color': currentQuestionIndex >= 2 ? 'white' : '#474A89' }" style="position: absolute; width: 100%; top: 50%; transform: translateY(-50%); text-align: center;">
-                Questão {{ currentQuestionIndex + 1 }} de {{ totalQuestions }}
+        <!-- Condição para exibir o quiz ou o gráfico de pontuação -->
+        <ng-container *ngIf="!showScoreChart; else scoreChart">
+          
+          <!-- Barra de progresso -->
+          <div class="d-flex justify-content-center">
+            <div class="progress-bar-container" style="width: 80%; background-color: #e0e0e0; border-radius: 8px; position: relative;">
+              <div class="progress-bar" [style.width.%]="progress" style="padding: 10px 0; border-radius: 8px; background-color: #474A89; color: white; text-align: center;">
+                <div class="question-indicator" [ngStyle]="{ 'color': currentQuestionIndex >= 2 ? 'white' : '#474A89' }" style="position: absolute; width: 100%; top: 50%; transform: translateY(-50%); text-align: center;">
+                  Questão {{ currentQuestionIndex + 1 }} de {{ totalQuestions }}
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="d-flex flex-column align-items-center mt-3">
-          <p class="text-white">{{ questions[currentQuestionIndex].question }}</p>
 
-          <!-- Exibição das opções em grid -->
-          <div class="options-grid">
-            <div *ngFor="let option of questions[currentQuestionIndex].options; let i = index" class="option-container">
-              <!-- Letra da opção (A, B, C, etc.) -->
-              <div class="option-letter">
-                {{ getOptionLetter(i) }}
-              </div>
-              <!-- Texto da opção -->
-              <label class="option-label" [for]="option">
+          <!-- Pergunta e opções -->
+          <div class="d-flex flex-column align-items-center mt-3">
+            <p class="text-white">{{ questions[currentQuestionIndex].question }}</p>
+
+            <!-- Exibição das opções em grid -->
+            <div class="options-grid">
+              <label *ngFor="let option of questions[currentQuestionIndex].options; let i = index" 
+                     class="option-container" 
+                     [class.selected]="selectedOption === option" 
+                     (click)="selectOption(option)">
+                <!-- Letra da opção (A, B, C, etc.) -->
+                <div class="option-letter">
+                  {{ getOptionLetter(i) }}
+                </div>
+                <!-- Texto da opção -->
                 <input type="radio" class="d-none" [id]="option" name="options" (change)="updateAnswer(option)" />
-                {{ option }}
+                <span class="option-label">{{ option }}</span>
               </label>
             </div>
           </div>
-        </div>
 
+          <!-- Botão Próximo -->
+          <div class="d-flex justify-content-center mt-3">
+            <button class="btn btn-primary next-button" (click)="increaseProgress()">
+              {{ currentQuestionIndex === totalQuestions - 1 ? 'Enviar' : 'Próximo' }}
+            </button>
+          </div>
 
+        </ng-container>
 
+        <!-- Gráfico de pontuação (donut simulado) e botão de redirecionamento -->
+        <ng-template #scoreChart>
+          <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100%;">
+            <h1 style="margin-bottom: 40px;" class="text-white">Sua Pontuação!</h1>
+            <div class="donut-chart">
+              <div class="donut-chart-circle" [ngStyle]="{'background': 'conic-gradient(#4caf50 ' + (score / totalQuestions * 100) + '%, #e0e0e0 0%)'}"></div>
+              <div class="d-flex justify-content-center donut-chart-text">{{ score }} / {{ totalQuestions }}</div>
+            </div>
+            <button class="btn btn-primary mt-4" (click)="submitAnswers()">Ir para Tela do Aluno</button>
+          </div>
+        </ng-template>
 
-
-        <!-- Botão Próximo -->
-        <div class="d-flex justify-content-center mt-3">
-          <button class="btn btn-primary next-button" (click)="increaseProgress()">
-            {{ currentQuestionIndex === totalQuestions - 1 ? 'Enviar' : 'Próximo' }}
-          </button>
-        </div>
       </div>
     </div>
     <div class="col-md-2 mt-3">
@@ -57,3 +73,4 @@
       <app-side-right></app-side-right>
     </div>
   </div>
+</div>
