--- a/Klapp_Angular/src/app/ranking/ranking.component.html
+++ b/Klapp_Angular/src/app/ranking/ranking.component.html
@@ -4,23 +4,23 @@
 
     <div class="row justify-content-center g-2 m-0 mt-md-3 justify-content-end p-0">
         <div class="col-md-3 text-center">
-            <img src="/assets/images/monster03.svg" alt="Imagem Acima" class="img-fluid">
+            <img src="/assets/images/monster03.svg" alt="Imagem Acima" class="img-fluid m-0">
             <div class="box second d-flex justify-content-center align-items-center flex-column">
-                <img src="/assets/images/second.svg" alt="" class="mb-2 m-2">
+                <img src="/assets/images/second.svg" alt="" class="mb-2 m-2" style="width: 50px; height: 50px;" >
                 <p>Jorge <br> Carvalho</p>
             </div>
         </div>
         <div class="col-md-3 text-center">
-            <img src="/assets/images/monster02.svg" alt="Imagem Acima" class="img-fluid">
+            <img src="/assets/images/monster02.svg" alt="Imagem Acima" class="img-fluid m-0">
             <div class="box first d-flex justify-content-center align-items-center flex-column">
                 <img src="/assets/images/first.svg" alt="" class="mb-5 m-2">
                 <p>Fernanda <br> Martin</p>
             </div>
         </div>
         <div class="col-md-3 text-center">
-            <img src="/assets/images/monster01.svg" alt="Imagem Acima" class="img-fluid">
+            <img src="/assets/images/monster01.svg" alt="Imagem Acima" class="img-fluid m-0">
             <div class="box third d-flex justify-content-center align-items-center flex-column">
-                <img src="/assets/images/third.svg" alt="" class="mb-2 m-2">
+                <img src="/assets/images/third.svg" alt="" class="mb-2 m-2" style="width: 40px; height: 40px;">
                 <p>Igor <br> Ferreira</p>
             </div>
         </div>
