--- a/Klapp_Angular/src/app/side-menu/side-menu.component.html
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.html
@@ -10,7 +10,7 @@
         <a routerLink="/studentQuizzes01" class="text-decoration-none text-dark mb-4">
             <p class="bi bi-pencil mb-4"> Quiz</p>
         </a>
-        <a href="/progresso" class="text-decoration-none text-dark mb-4">
+        <a routerLink="/student-progress"class="text-decoration-none text-dark mb-4">
             <p class="bi bi-bar-chart mb-4"> Progresso</p>
         </a>
         <a href="/forum" class="text-decoration-none text-dark mb-4">
