--- a/Klapp_Angular/src/app/side-right/side-right.component.html
+++ b/Klapp_Angular/src/app/side-right/side-right.component.html
@@ -10,8 +10,7 @@
                         <a routerLink="/tela-quiz" class="quiz-pendente d-flex banner-border border border-2 m-2">
                             <img src="/assets/images/books.svg" alt="imagem de livros">
                             <div class="materia">
-                                <p>Fundamentos de
-                                    Sistemas de Informação</p>
+                                <p>Constução de algoritimos</p>
                                 <div class="inferior">
                                     <p>Disponível até 16/12</p>
                                 </div>
