--- a/Klapp_Angular/src/app/ranking/ranking.component.scss
+++ b/Klapp_Angular/src/app/ranking/ranking.component.scss
@@ -18,6 +18,7 @@
 span {
   color: #191D6B;
   font-family: "Poppins", sans-serif;
+  font-size: 50px;
 }
 
 .podio {
@@ -54,17 +55,17 @@ p {
 
 .first {
 
-  height: 300px;
+  height: 270px;
 }
 
 .second {
 
-  height: 250x;
+  height: 220x;
 }
 
 .third {
 
-  height: 150px;
+  height: 120px;
 }
 
 .col-md-3 {
