--- a/Klapp_Angular/src/app/logout-image/logout-image.component.html
+++ b/Klapp_Angular/src/app/logout-image/logout-image.component.html
@@ -1,13 +1,13 @@
 <div class="container banner-border border border-2 mb-2" style="border-radius: 8px; max-height: 99px; min-width: 350px;">
-    <div class="d-flex align-items-center m-3">
-      <a href="#"><i class="bi bi-bell"></i></a>
-      <a href="#"><i class="bi bi-box-arrow-right"></i></a>
-      <p>Olá, Carol Oliveira!</p>
-      <img src="/assets/images/Profile-image.svg" alt="Imagem de perfil de Carol Oliveira">
-    </div>
+  <div class="d-flex align-items-center m-3">
+    <a href="#" (click)="$event.preventDefault(); toggleNotification()"><i class="bi bi-bell"></i></a>
+    <a href="#"><i class="bi bi-box-arrow-right"></i></a>
+    <p>Olá, Carol Oliveira!</p>
+    <img src="/assets/images/Profile-image.svg" alt="Imagem de perfil de Carol Oliveira">
+  </div>
 </div>
 
-<!-- Notificação que aparece automaticamente por 5 segundos -->
+<!-- Notificação que aparece apenas ao clicar no ícone de sino -->
 <div *ngIf="notificationVisible" class="notification">
   <div class="notification-header">
     <i class="bi bi-info-circle"></i>
