--- a/Klapp_Angular/src/app/profile-container/profile-container.component.html
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.html
@@ -1,8 +1,11 @@
 <div class="container banner-border border border-2" style="border-radius: 8px; min-height: 555px;">
-    <div class="foto-dados">
+    <div class="foto-dados m-2 ms-5">
         <h1>Perfil do aluno</h1>
-        <div class="form-image d-flex me-5">
-            <img src="/assets/images/Profile-imageG.svg" alt=""><i class="bi bi-plus-circle"></i>
+        <div class="form-image d-flex gap-5">
+            <div class="image-container">
+                <img src="/assets/images/Profile-imageG.svg" alt="">
+                <button class="bi bi-plus-circle btn-overlay"></button>
+            </div>
             <div>
                 <form (ngSubmit)="onSubmit()">
                     <label for="nome">Nome</label>
@@ -11,7 +14,8 @@
                     <label for="email">Email</label>
                     <input type="text" id="email" [(ngModel)]="email" name="email" class="mb-2" required>
                     <label for="numeroFixo">RA</label>
-                    <input type="number" id="numeroFixo" [(ngModel)]="fixedNumber" name="numeroFixo" class="mb-2" disabled>
+                    <input type="number" id="numeroFixo" [(ngModel)]="fixedNumber" name="numeroFixo" class="mb-2"
+                        disabled>
 
                 </form>
             </div>
@@ -21,76 +25,93 @@
             <h2>Insira suas notas do ensino médio</h2>
             <p>Preencha os campos abaixo com as suas médias anuais para calcular seu desempenho final.</p>
 
-            <form (ngSubmit)="onSubmit()" class="col-4">    
+            <form (ngSubmit)="onSubmit()" class="w-100 mb-4">
                 <div class="notas-container">
-                    <p>Primeiro ano</p>
+                    <strong class="m-0">Primeiro ano</strong>
                     <div class="notas">
                         <div class="nota">
                             <label for="nota1">Matemática</label>
-                            <input type="number" id="nota1" [(ngModel)]="nota1" name="nota1" class="mb-2" required>
+                            <input type="number" id="nota1" [(ngModel)]="nota1" name="nota1" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota2">Português</label>
-                            <input type="number" id="nota2" [(ngModel)]="nota2" name="nota2" class="mb-2" required>
+                            <input type="number" id="nota2" [(ngModel)]="nota2" name="nota2" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota3">Biologia</label>
-                            <input type="number" id="nota3" [(ngModel)]="nota3" name="nota3" class="mb-2" required>
+                            <input type="number" id="nota3" [(ngModel)]="nota3" name="nota3" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota4">Artes</label>
-                            <input type="number" id="nota4" [(ngModel)]="nota4" name="nota4" class="mb-2" required>
+                            <input type="number" id="nota4" [(ngModel)]="nota4" name="nota4" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                     </div>
                 </div>
-            
+
                 <div class="notas-container">
-                    <p>Segundo ano</p>
+                    <strong class="m-0">Segundo ano</strong>
                     <div class="notas">
                         <div class="nota">
                             <label for="nota1-2">Matemática</label>
-                            <input type="number" id="nota1-2" [(ngModel)]="nota1_2" name="nota1_2" class="mb-2" required>
+                            <input type="number" id="nota1-2" [(ngModel)]="nota1_2" name="nota1_2" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota2-2">Português</label>
-                            <input type="number" id="nota2-2" [(ngModel)]="nota2_2" name="nota2_2" class="mb-2" required>
+                            <input type="number" id="nota2-2" [(ngModel)]="nota2_2" name="nota2_2" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota3-2">Biologia</label>
-                            <input type="number" id="nota3-2" [(ngModel)]="nota3_2" name="nota3_2" class="mb-2" required>
+                            <input type="number" id="nota3-2" [(ngModel)]="nota3_2" name="nota3_2" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota4-2">Artes</label>
-                            <input type="number" id="nota4-2" [(ngModel)]="nota4_2" name="nota4_2" class="mb-2" required>
+                            <input type="number" id="nota4-2" [(ngModel)]="nota4_2" name="nota4_2" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                     </div>
                 </div>
-            
+
                 <div class="notas-container">
-                    <p>Terceiro ano</p>
+                    <strong class="m-0">Terceiro ano</strong>
                     <div class="notas">
                         <div class="nota">
                             <label for="nota1-3">Matemática</label>
-                            <input type="number" id="nota1-3" [(ngModel)]="nota1_3" name="nota1_3" class="mb-2" required>
+                            <input type="number" id="nota1-3" [(ngModel)]="nota1_3" name="nota1_3" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota2-3">Português</label>
-                            <input type="number" id="nota2-3" [(ngModel)]="nota2_3" name="nota2_3" class="mb-2" required>
+                            <input type="number" id="nota2-3" [(ngModel)]="nota2_3" name="nota2_3" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota3-3">Biologia</label>
-                            <input type="number" id="nota3-3" [(ngModel)]="nota3_3" name="nota3_3" class="mb-2" required>
+                            <input type="number" id="nota3-3" [(ngModel)]="nota3_3" name="nota3_3" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                         <div class="nota">
                             <label for="nota4-3">Artes</label>
-                            <input type="number" id="nota4-3" [(ngModel)]="nota4_3" name="nota4_3" class="mb-2" required>
+                            <input type="number" id="nota4-3" [(ngModel)]="nota4_3" name="nota4_3" class="mb-2"
+                                style="width: 70px;" required>
                         </div>
                     </div>
                 </div>
-            
-                <button type="submit">Enviar</button>
+
+                <!-- Contêiner do botão de envio -->
+                <div class="d-flex justify-content-end w-100 mt-3">
+                    <button type="submit" class="btn btn-primary" style="max-width: 100px;">Salvar</button>
+                </div>
             </form>
-            
-            
+
+
+
         </div>
     </div>
+</div>
