--- a/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
+++ b/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
@@ -7,7 +7,7 @@
       <app-banner-top></app-banner-top>
       <div class="container banner-border border border-2" style="border-radius: 8px; height: 553px;">
         <div class="d-flex justify-content-center">
-          <h3 class="text-white mt-1 mb-2">Fundamentos de Sistemas de Informação</h3>
+          <h3 class="text-white mt-1 mb-2">Construção de Algoritimos</h3>
         </div>
 
         <!-- Condição para exibir o quiz ou o gráfico de pontuação -->
