--- a/Klapp_Angular/src/app/alterar-senha/alterar-senha.component.html
+++ b/Klapp_Angular/src/app/alterar-senha/alterar-senha.component.html
@@ -1,3 +1,33 @@
 <div class="banner-border border border-2" style="min-height: 553px; min-width: 350px;">
-    
+    <div ngbAccordion>
+        <div ngbAccordionItem [collapsed]="false">
+            <h2 ngbAccordionHeader>
+                <button ngbAccordionButton><i class="bi bi-lock m-2"></i> Alterar senha</button>
+            </h2>
+            <div ngbAccordionCollapse>
+                <div ngbAccordionBody>
+                    <ng-template>
+                       
+
+
+
+                    </ng-template>
+                </div>
+            </div>
+        </div>
+        <div ngbAccordionItem>
+            <h2 ngbAccordionHeader>
+                <button ngbAccordionButton><i class="bi bi-bell m-2"></i>Notificações</button>
+            </h2>
+            <div ngbAccordionCollapse>
+                <div ngbAccordionBody>
+                    <ng-template>
+                        
+
+                        
+                    </ng-template>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
