--- a/Klapp_Angular/src/app/side-right/side-right.component.scss
+++ b/Klapp_Angular/src/app/side-right/side-right.component.scss
@@ -1,17 +1,20 @@
 .banner-border {
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
-    backdrop-filter: blur(10px); /* Aplica o desfoque */
-    -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
-    border-radius: 8px;
-  }
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.3);
+  /* Fundo semitransparente */
+  backdrop-filter: blur(10px);
+  /* Aplica o desfoque */
+  -webkit-backdrop-filter: blur(10px);
+  /* Compatibilidade com navegadores WebKit */
+  border-radius: 8px;
+}
 
-  .accordion-item {
-    color: #FFF;
-    font-family: "Poppins", sans-serif;
-   
-    background-color: transparent;
-    border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+.accordion-item {
+  color: #FFF;
+  font-family: "Poppins", sans-serif;
+
+  background-color: transparent;
+  border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
 }
 
 button {
@@ -23,10 +26,10 @@ button {
 .accordion-button:not(.collapsed) {
   color: #FFF;
   background-color: transparent;
-  
+
 }
 
-.materia{
+.materia {
   margin-left: 5px;
   text-align: left;
   font-family: "Poppins", sans-serif;
@@ -36,12 +39,12 @@ button {
 
 
 
-.inferior{
+.inferior {
   text-align: right;
   align-items: end;
   font-size: 13px;
 }
 
-a{
+a {
   text-decoration: none;
 }
