--- a/Klapp_Angular/src/app/profile-container/profile-container.component.scss
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.scss
@@ -30,19 +30,19 @@ p {
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-
 }
 
 form {
   min-width: 300px;
+  width: 100%; /* Garante que o formulário ocupe toda a largura */
   display: flex;
   flex-direction: column;
 }
 
 label {
-  margin: 0;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
-
 
 input[type="text"],
 input[type="number"] {
@@ -55,27 +55,21 @@ input[type="number"] {
 }
 
 .notas-container {
-  margin-bottom: 2rem; // Espaçamento entre os anos
+  margin-bottom: 2rem; /* Espaçamento entre os anos */
 }
 
 .notas {
   display: flex;
-  justify-content: space-between; // Espaça igualmente os itens
-  gap: 40px;
+  gap: 20px; /* Espaçamento entre os inputs */
 }
 
 .nota {
-  flex: 1; // Cada nota ocupa igual espaço
-  margin-right: 1rem; // Espaçamento entre as notas
-}
-
-.nota:last-child {
-  margin-right: 0; // Remove margem do último item
+  flex: 1;
 }
 
 .image-container {
   position: relative;
-  display: inline-block; /* Mantém o tamanho do contêiner em torno da imagem */
+  display: inline-block;
 }
 
 .image-container img {
@@ -86,26 +80,23 @@ input[type="number"] {
 .btn-overlay {
   background-color: #FFF;
   position: absolute;
-  bottom: 25px; /* Ajuste conforme necessário */
-  right: 5px;  /* Ajuste conforme necessário */
+  bottom: 25px;
+  right: 5px;
   background-color: transparent;
   border: none;
-  font-size: 24px; /* Ajuste o tamanho conforme necessário */
+  font-size: 24px;
   cursor: pointer;
 }
 
 .btn-primary {
-  width: 100%;
-  height: 25px;
+  height: 35px; /* Maior altura para o botão */
+  width: 70px;
   margin-top: 20px;
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border: none;
- 
+  border: solid 2px;
   cursor: pointer;
   color: #fff;
-  
   font-size: 20px;
 }
-
